Fix for a first name with a space in it wrapping and overflowing below the top header

--- a/css/style.css
+++ b/css/style.css
@@ -4813,6 +4813,7 @@ filter: progid:DXImageTransform.Microsoft.Alpha(opacity=30);
     max-width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .user-name, a.user-name {
     float: right;
